shopping-list/shopping-list-template.yml
apiVersion: v1
kind: List
items:
- kind: Deployment
  metadata:
    name: shopping-list-deployment
    annotations:
      version: 0.0.1-SNAPSHOT
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: shopping-list
          component: shopping-list
      spec:
        containers:
          - name: shopping-list
            image: shopping-list:0.0.1-SNAPSHOT
              ports:
              - containerPort: 8080
              - containerPort: 8443
            lifecycle:
              preStop:
                exec:
                  # SIGTERM triggers a quick exit; gracefully terminate instead
                  command: ["kill", "-SIGINT", "`pidof java`"]
            resources:
              requests:
                memory: "64Mi"
                cpu: "250m"
              limits:
                memory: "128Mi"
                cpu: "500m"
            readinessProbe:
              httpGet:
                path: /actuator/health
                port: 8080
              initialDelaySeconds: 5
              periodSeconds: 5
            livenessProbe:
              httpGet:
                path: /actuator/health
                port: 8080
              initialDelaySeconds: 5
              periodSeconds: 5
- kind: Service
  metadata:
    name: shopping-list-service
  spec:
    selector:
      app: shopping-list-service
    ports:
      - protocol: TCP
        port: 80
        targetPort: 80
      - protocol: TCP
        port: 443
        targetPort: 8443
    type: LoadBalancer
- kind: Route
  metadata:
    labels:
      component: shopping-list-route
    name: shopping-list-route
  spec:
    port:
      targetPort: http
    to:
      kind: Service
      name: shopping-list-service
    tls:
      insecureEdgeTerminationPolicy: Allow
      termination: edge
